changed the url

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     $(function () {
         $("form").on("submit", function () {
             $.ajax({
-                url: "http://192.168.1.43:3000",
+                url: "https://protected-plateau-43755.herokuapp.com/",
                 data: {
                     email: $("#email").val(),
                     question: $("#question").val(),
