--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>You are in my head</h1>
+    <h1 style="text-align: center">You are in my head</h1>
     <div class="form-group">
         <form>
             <label class="sr-only" for="question">Question 1</label>
@@ -20,7 +20,7 @@
             <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required placeholder="abc@test.com"/>
             <span class="help-block">Please enter your email id.</span>
             <input type="text" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
         </form>
     </div>
     <div class="form-group">
@@ -31,7 +31,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript">
     $(function () {
-        $("form").on("submit", function () {
+        $("form").on("submit", function (e) {
+            e.preventDefault();
             $.ajax({
                 url: "https://protected-plateau-43755.herokuapp.com/",
                 data: {
