--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <textarea id="question" class="form-control" aria-describedby="helpBlock" required></textarea>
             <span class="help-block">Please enter your Q/A.</span>
             <label class="sr-only" for="email">Email</label>
-            <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required placeholder="abc@test.com"/>
+            <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required
+                   placeholder="abc@test.com"/>
             <span class="help-block">Please enter your email id.</span>
             <input type="text" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
             <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
@@ -39,10 +40,10 @@
                     email: $("#email").val(),
                     question: $("#question").val(),
                     time: $("#time").val()
-                },
-                success: function (res) {
-                    alert("Successfully submitted.")
                 }
+            }).always(function () {
+                $("form")[0].reset();
+                alert("Successfully submitted.")
             })
         });
     })
