added number check for minutes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required
                    placeholder="abc@test.com"/>
             <span class="help-block">Please enter your email id.</span>
-            <input type="text" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
+            <input type="number" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
             <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
         </form>
     </div>
