Added the first image

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style type="text/css">
+        h1{
+            text-align: center;
+        }
+        .img1{
+            background: url("images/img1.png") no-repeat;
+            background-size: 100% 100%;
+            width: 100%;
+            height: 2048px;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <h1 style="text-align: center">You are in my head</h1>
+<div>
+    <div class="img1"></div>
     <div class="form-group">
         <form>
             <label class="sr-only" for="question">Question 1</label>
@@ -23,9 +34,6 @@
             <input type="number" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
             <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
         </form>
-    </div>
-    <div class="form-group">
-
     </div>
 
 </div>
