--- a/index.html
+++ b/index.html
@@ -11,11 +11,32 @@
         h1{
             text-align: center;
         }
+        /* Extra small devices (phones, less than 768px) */
+        /* No media query since this is the default in Bootstrap */
+
         .img1{
             background: url("images/img1.png") no-repeat;
             background-size: 100% 100%;
             width: 100%;
-            height: 2048px;
+            height: 527px;
+        }
+
+        /* Small devices (tablets, 768px and up) */
+        @media (min-width: 768px) {
+        }
+
+        /* Medium devices (desktops, 992px and up) */
+        @media (min-width: 992px) {
+            .img1 {
+                height: 2048px
+            }
+        }
+
+        /* Large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {
+            .img1 {
+                height: 2048px;
+            }
         }
     </style>
 </head>
