Added styling for page2

--- a/index.html
+++ b/index.html
@@ -8,13 +8,42 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style type="text/css">
-        h1{
+        h1 {
             text-align: center;
         }
+        h3{
+            font-size: 42px;
+            font-weight: normal;
+            margin: 5% 0;
+        }
+
+        body {
+            color: rgb(164,166,167);
+            background: #182123;
+            font-family: Gotham;
+        }
+
+        input{
+            font-family: inherit;
+            line-height: inherit;
+            display: block;
+            width: 100%;
+            background: transparent;
+            border: 0;
+            font-size: 22px;
+            margin-bottom: 5%;
+            border-bottom: 1px solid;
+            border-right: 0.5px solid;
+        }
+
+        input:active{
+            border-color: #182123;
+        }
+
         /* Extra small devices (phones, less than 768px) */
         /* No media query since this is the default in Bootstrap */
 
-        .img1{
+        .img1 {
             background: url("images/img1.png") no-repeat;
             background-size: 100% 100%;
             width: 100%;
@@ -43,17 +72,34 @@
 <body>
 <div>
     <div class="img1"></div>
-    <div class="form-group">
+    <div class="container form-group">
         <form>
-            <label class="sr-only" for="question">Question 1</label>
-            <textarea id="question" class="form-control" aria-describedby="helpBlock" required></textarea>
-            <span class="help-block">Please enter your Q/A.</span>
-            <label class="sr-only" for="email">Email</label>
-            <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required
-                   placeholder="abc@test.com"/>
-            <span class="help-block">Please enter your email id.</span>
-            <input type="number" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
-            <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
+            <h3>What are 3 things that define you that you'd never change about yourself?</h3>
+            <input type="text" placeholder="Write Here" name="q1"/>
+            <input type="text" placeholder="Write Here" name="q2"/>
+            <input type="text" placeholder="Write Here" name="q3"/>
+
+            <h3>What are 3 things about you that hold you back and you'd like to change about yourself</h3>
+            <input type="text" placeholder="Write Here" name="q4"/>
+            <input type="text" placeholder="Write Here" name="q5"/>
+            <input type="text" placeholder="Write Here" name="q6"/>
+
+            <h3>your e-mail:</h3>
+            <input type="email" placeholder="Write Here" required/>
+
+            <button type="submit" class="btn btn-primary">Send One Year Later</button>
+
+            <!--
+                        <label class="sr-only" for="question">Question 1</label>
+                        <textarea id="question" class="form-control" aria-describedby="helpBlock" required></textarea>
+                        <span class="help-block">Please enter your Q/A.</span>
+                        <label class="sr-only" for="email">Email</label>
+                        <input type="email" id="email" class="form-control" aria-describedby="helpBlock" required
+                               placeholder="abc@test.com"/>
+                        <span class="help-block">Please enter your email id.</span>
+                        <input type="number" id="time" class="time" required placeholder="1"/><span class="hrs-text"> minute(s)</span>
+                        <button type="submit" class="btn btn-primary" style="display: block;margin-top: 20px">Submit</button>
+            -->
         </form>
     </div>
 
