--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style type="text/css">
+        @font-face {
+            font-family: Gotham;
+            src: url("fonts/Gotham-Book.otf") format("opentype");
+        }
         h3{
             font-size: 42px;
             font-weight: normal;
@@ -17,7 +21,8 @@
         body {
             color: rgb(164,166,167);
             background: #182123;
-            /*font-family: Gotham;*/
+            font-family: Gotham, serif;
+            letter-spacing: 2px;
         }
 
         input{
@@ -38,6 +43,7 @@
             padding: 10px;
             font-size: 22px;
             background: #fff;
+            font-weight: bold;
         }
 
         .container{
