--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             background: #182123;
             font-family: Gotham, serif;
             letter-spacing: 2px;
+            width: 100vw;
         }
 
         input{
             font-family: inherit;
             line-height: inherit;
             display: block;
-            width: 100%;
             background: transparent;
             border: 0;
             font-size: 22px;
