--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             margin-bottom: 5%;
             border-bottom: 1px solid;
             border-right: 0.5px solid;
+            width: 100%;
         }
 
         button{
