--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 
         .container{
             height: 100vh;
-            padding: 20% 0;
+            padding: 10% 0;
+        }
+
+        .last-item{
+            margin-bottom: 15%;
         }
 
         /* Extra small devices (phones, less than 768px) */
@@ -92,15 +96,15 @@
             <h3>What are 3 things that define you that you'd never change about yourself?</h3>
             <input type="text" placeholder="Write Here" id="q1" required/>
             <input type="text" placeholder="Write Here" id="q2" required/>
-            <input type="text" placeholder="Write Here" id="q3" required/>
+            <input type="text" class="last-item" placeholder="Write Here" id="q3" required/>
 
             <h3>What are 3 things about you that hold you back and you'd like to change about yourself</h3>
             <input type="text" placeholder="Write Here" id="q4" required/>
             <input type="text" placeholder="Write Here" id="q5" required/>
-            <input type="text" placeholder="Write Here" id="q6" required/>
+            <input type="text" class="last-item" placeholder="Write Here" id="q6" required/>
 
             <h3>your e-mail:</h3>
-            <input type="email" placeholder="Write Here" required/>
+            <input type="email" class="last-item" placeholder="Write Here" required/>
 
             <button type="submit">Send One Year Later</button>
 
