--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             src: url("fonts/Gotham-Book.otf") format("opentype");
         }
         h3{
-            font-size: 42px;
+            font-size: 34px;
             font-weight: normal;
             margin: 5% 0;
         }
@@ -89,8 +89,8 @@
     </style>
 </head>
 <body>
-<div>
-    <div class="img1"></div>
+    <img src="images/img1.png" />
+    <!--<div class="img1"></div>-->
     <div class="container form-group">
         <form>
             <h3>What are 3 things that define you that you'd never change about yourself?</h3>
@@ -121,7 +121,6 @@
             -->
         </form>
     </div>
-</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript">
     $(function () {
