--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
             border-right: 0.5px solid;
             width: 100%;
         }
+        ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            opacity: 0.8;
+        }
+        ::-moz-placeholder { /* Firefox 19+ */
+            opacity: 0.8;
+        }
+        :-ms-input-placeholder { /* IE 10+ */
+            opacity: 0.8;
+        }
+        :-moz-placeholder { /* Firefox 18- */
+            opacity: 0.8;
+        }
 
         button{
             width: 100%;
