Added question mark

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <input type="text" placeholder="Write Here" id="q2" required/>
         <input type="text" class="last-item" placeholder="Write Here" id="q3" required/>
 
-        <h3>What are 3 things about you that hold you back and you'd like to change about yourself</h3>
+        <h3>What are 3 things about you that hold you back and you'd like to change about yourself?</h3>
         <input type="text" placeholder="Write Here" id="q4" required/>
         <input type="text" placeholder="Write Here" id="q5" required/>
         <input type="text" class="last-item" placeholder="Write Here" id="q6" required/>
