fixed the button size

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             opacity: 0.8;
         }
 
-        button {
+        /*button {
             width: 100%;
             padding: 80px;
             font-size: 22px;
@@ -63,7 +63,7 @@
             background-position: center;
             border:0;
             font-weight: bold;
-        }
+        }*/
 
         .my-container {
             height: 100vh;
@@ -125,8 +125,9 @@
 
         <h3>your e-mail:</h3>
         <input type="email" id="email" class="last-item" placeholder="Write Here" required/>
-
-        <button type="submit"></button>
+        <button type="submit">
+            <img src="images/send-btn.png" width="930px"/>
+        </button>
 
         <!--
                     <label class="sr-only" for="question">Question 1</label>
