changed the image

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             opacity: 0.8;
         }
 
+        button{
+            padding: 0;
+        }
+
         /*button {
             width: 100%;
             padding: 80px;
@@ -126,7 +130,7 @@
         <h3>your e-mail:</h3>
         <input type="email" id="email" class="last-item" placeholder="Write Here" required/>
         <button type="submit">
-            <img src="images/send-btn.png" width="930px"/>
+            <img src="images/send-btn1.png" width="930px"/>
         </button>
 
         <!--
